apps/base/media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:

      nodeSelector:
        node-role.kubernetes.io/control-plane: "true"

      restartPolicy: Always

      # securityContext:
      #   runAsUser: 1001
      #   runAsGroup: 1001
      #   supplementalGroups:
      #     - 992

      containers:
      - name: jellyfin
        image: jellyfin/jellyfin

        resources:
          limits:
            memory: "3Gi"
            cpu: "3000m"
          requests:
            memory: "512Mi"
            cpu: "600m"

        ports:
        - containerPort: 8096
          protocol: TCP

        securityContext:
          privileged: true

        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media/movies
          readOnly: true
        - name: media
          mountPath: /media/tv
          readOnly: true
        - name: 'render-device'
          mountPath: '/dev/dri/renderD128'


      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media-shared-pvc
      - name: 'render-device'
        hostPath:
          path: '/dev/dri/renderD128'
