apps/base/media/jellyfin/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: jellyfin-svc            
  namespace: media
spec:
  selector:
    app: jellyfin       
  ports:                      
  - port: 80            
    targetPort: 8096      
    name: web-ui         
    protocol: TCP
  type: ClusterIP
