apps/base/media/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: media
  # annotations:
  #   traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: jellyfin.mkped.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin-svc
                port:
                  number: 8096
